Add TryFinal example and enhance CollectorsExample, IntermediteOperations, EmployeeQue, and InterviewQue with improved comments and functionality